Add the score as an argument in justification mapping